# JARVIS-PRIME

./: .env.example  .gitignore  README.md  pyproject.toml
src/jarvis/: __init__.py  __main__.py  cli.py
src/jarvis/agents/: __init__.py  base_agent.py  biotech.py  creative.py  cybersecurity.py  energy.py  exotic_physics.py  legal_financial.py  quantum.py  robotics.py  scientific.py
src/jarvis/assistant/: __init__.py  __main__.py  automation.py  brain.py  desktop_pet.py  main.py  voice.py
src/jarvis/assistant/avatar/: index.html
src/jarvis/core/: __init__.py  active_inference.py  cognitive_core.py  memory.py  metacognition.py  nexus.py  protocols.py  reasoning.py  self_improvement.py  swarm.py  world_model.py
src/jarvis/infrastructure/: __init__.py  auth.py  config.py  startup_manager.py  telemetry.py  version_control.py
src/jarvis/interfaces/: __init__.py  dashboard.py
src/jarvis/interfaces/web/: index.html
src/jarvis/knowledge/: __init__.py  embeddings.py  graph_rag.py  ontology.py
src/jarvis/perception/: __init__.py  audio.py  biometrics.py  vision.py  vision_agent.py
src/jarvis/simulation/: __init__.py  molecular.py  plasma.py
src/jarvis/tools/: code_editor.py
src/jarvis_data/episodic/: episodes.json
src/research_journal/: hypotheses.json
tests/: conftest.py  test_assistant.py  test_jarvis.py  test_phase2.py  test_phase3.py
