[project]
name = "jarvis-prime"
version = "0.1.0"
description = "JARVIS-PRIME: Omnidisciplinary Autonomous Intelligence System"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "JARVIS-PRIME Team"},
]

[project.dependencies]
# Core AI/ML
langchain-core = ">=0.3"
langchain-community = ">=0.3"
langgraph = ">=0.4"
pydantic = ">=2.9"
pydantic-settings = ">=2.6"

# Scientific Computing
numpy = ">=1.26"
scipy = ">=1.14"
sympy = ">=1.13"

# Infrastructure
fastapi = ">=0.115"
uvicorn = {version = ">=0.32", extras = ["standard"]}
httpx = ">=0.27"
rich = ">=13.9"
click = ">=8.1"
python-dotenv = ">=1.0"

# Data
h5py = ">=3.12"

[project.optional-dependencies]
llm = [
    "openai>=1.50",
    "anthropic>=0.37",
    "google-generativeai>=0.8",
]
knowledge = [
    "neo4j>=5.25",
    "weaviate-client>=4.9",
    "chromadb>=0.5",
]
quantum = [
    "qiskit>=1.3",
    "pennylane>=0.39",
]
robotics = [
    # rclpy installed via ROS2 system packages
]
perception = [
    "opencv-python>=4.10",
    "mediapipe>=0.10",
]
gpu = [
    "torch>=2.4",
    "cupy-cuda12x>=13.3",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.12",
]
all = [
    "jarvis-prime[llm,knowledge,quantum,perception,gpu,dev]",
]

[project.scripts]
jarvis = "jarvis.cli:main"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
